--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -52,7 +52,6 @@ h1{
     color: var(--secondary) !important; 
 }
 
-/* 
 .navbar-toggler-icon {
     filter: invert(1);
 }
@@ -62,6 +61,6 @@ h1{
     outline: none;
     box-shadow: none;
     border-color: rgb(255, 237, 235) ;
-} */
-/* Fine Navbar */
+} 
+
 
