--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@
     --primary: rgb(36, 35, 49);
     --secondary: rgba(244, 246, 245);
     --accent: rgba(229, 99, 153);
-    --accent2: rgba(20, 148, 184);
+    --accent2: rgb(20, 148, 184);
 }
 /* Fonts */
 :root{
