--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,8 +29,8 @@ h1{
     color: var(black);
     font-weight:600;
 }
-/* Navbar */
 
+/* Navbar */
 .text-tasky{
     color: var(--accent);
     font-weight: 600;
@@ -57,13 +57,6 @@ h1{
     filter: invert(1);
 }
 
-/* .navbar-toggler:focus, 
-.navbar-toggler:active {
-    outline: none;
-    box-shadow: none;
-    border-color: rgb(255, 237, 235) ;
-}  */
-
 .dropdown-custom {
     background-color: transparent !important;
     border: none;  
@@ -76,7 +69,7 @@ h1{
 }
 /* Fine Navbar */
 
-/* Cards */
+/* Cards servizi*/
 .card {
     box-shadow: 3px 0px 10px 0px var(--accent2);
 }
