--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 /* Palette colori */
 :root {
+    /* primary alt */
     /* --primary: rgb(36, 35, 49); */
     --primary: rgb(10, 10, 10);
     --secondary: rgba(244, 246, 245);
@@ -101,7 +102,6 @@ h1,h2,h3{
 }
 
 /* Hero Section */
-
 #hero{
     position: relative;
     width: 100%;
@@ -109,8 +109,31 @@ h1,h2,h3{
 
 .hero-content{
     position: absolute;
+    top: 180px;
 }
 
 .hover-custom:hover{
     color: var(--secondary) !important;
+}
+
+.scroll-down{
+    font-size: 2.3rem;
+    position: relative;
+    cursor: pointer;
+    animation: bounce 1.5s infinite;
+    color: var(--accent);
+}
+
+@keyframes bounce{
+    0% { transform: translateY(0); }
+    50% { transform: translateY(13px); }
+}
+
+.title-custom{
+    color: var(--accent);
+}
+
+.shadow-custom{
+    box-shadow: 5px 5px 12px 0px var(--accent);
+    border-radius: 15px;
 }
