Inserito Footer e migliorato aspetto generale

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,7 +87,7 @@ h1,h2,h3{
 }
 
 #logo:hover {
-    filter: brightness(0) invert(1); 
+    filter: brightness(1) invert(0); 
     
 }
 
@@ -98,7 +98,7 @@ h1,h2,h3{
 
 .card-review{
     box-shadow: 5px 3px 10px 3px var(--accent);
-
+    
 }
 
 /* Hero Section */
@@ -134,6 +134,21 @@ h1,h2,h3{
 }
 
 .shadow-custom{
-    box-shadow: 5px 5px 12px 0px var(--accent);
+    box-shadow: 0px 0px 6px 3px var(--accent2);
     border-radius: 15px;
+}
+
+/* Footer */
+
+.border-color{
+    border-color: var(--accent) !important;
+}
+
+.footer-position{
+    position: relative;
+    top: 80px;
+}
+
+.btn-outline-light{
+    border-color: var(--accent);
 }
