--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -151,8 +151,8 @@ h1,h2,h3{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -164,10 +164,17 @@ h1,h2,h3{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(12, 12, 12, 0.8), rgba(12, 12, 12, 0.6));
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(12, 12, 12, 0.8), rgba(12, 12, 12, 0.5));
 }
+
+@media screen and (min-width: 320px) and (max-width: 3840px) {
+    .bg-overlay {
+        background-size: cover;
+    }
+}
+
 
 /* CARDS*/
 .card{
