introdotto icona per tornare indietro a tutti i servizi

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,6 +35,12 @@ h1,h2,h3{
 .text-color:hover{
     color: whitesmoke;
 }
+.text-color2{
+    color: var(--accent2);
+}
+.text-color2:hover{
+    color: whitesmoke
+}
 
 /* Buttons in generale */
 .btn-custom{
