--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,7 +160,7 @@ h1,h2,h3{
     background-size: cover;
     background-position: center;
     z-index: -1;
-    filter: blur(3px);
+    filter: blur(0px);
 }
 .bg-overlay::after {
     content: "";
@@ -169,7 +169,7 @@ h1,h2,h3{
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(180deg, rgba(12, 12, 12, 0.8), rgba(12, 12, 12, 0.5));
+    background: linear-gradient(180deg, rgba(12, 12, 12, 0.7), rgba(12, 12, 12, 0.7));
 }
 
 /* CARDS*/
@@ -193,11 +193,10 @@ h1,h2,h3{
 .card-service{
     box-shadow: none;
     margin: 6%;
-    transition: transform 0.2s, 
+    transition: transform 0.2s,
     box-shadow 0.5s ease-in-out; 
 }
 .card-service:hover{
-    /* box-shadow: 5px 5px 5px  var(--accent2-op); */
     transform: scale(1.1);
 }
 
@@ -210,7 +209,6 @@ h1,h2,h3{
     overflow: hidden;
 }
 .card-review:hover{
-    /* box-shadow: 12px 12px 15px  var(--accent-op); */
     transform: scale(1.1);
 }
 
@@ -228,6 +226,27 @@ h1,h2,h3{
     -webkit-backdrop-filter: blur(8px);
     border-radius: 10px;
 }
+
+/* Card user service e review */
+.card-service-profile .service-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Sfondo scuro semi-trasparente */
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0; 
+    transition: opacity 0.5s ease-in-out;
+}
+
+.card-service-profile:hover .service-overlay {
+    opacity: 1; 
+}
+
 
 /* PAGINATOR */
 /* Stile base per tutti gli elementi della paginazione */
@@ -404,5 +423,8 @@ h1,h2,h3{
         width: 900px;
         height: 700px;
         background-size: cover;
+    }
+    .card-service-profile .service-overlay {
+        opacity: 1; 
     }
 }
