inserito componente carrello in view profile e aggiornato stile icona

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,9 +140,11 @@ h1,h2,h3{
     background-color: transparent !important;
     color: whitesmoke !important;
 }
-.bi-cart-fill:hover{
+.bi-cart{
+    color: whitesmoke;
+}
+.bi-cart:hover{
     color: var(--accent);
-    transform: translateY(-2px);
 }
 /* Fine Navbar */
 
