modificato file .ini per dimensioni file img,apportato ultime modifiche

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -431,7 +431,7 @@ th ,td{
         color: inherit;
         border-bottom: none;
     }
-    .btn-outline-light{
+    .btn-outline-light .btn-outline-success .btn-outline-primary{
         font-size: 1rem;
     }
     .border-color-foot{
